fix subscribe button text size.  fix social buttons alignment on mobile

--- a/css/site.styl
+++ b/css/site.styl
@@ -551,6 +551,9 @@ input.email
 
   .col
     margin-bottom: 1em
+    
+  #subscribe
+    font-size: 13px
 
   .footer-social
     font-size: $font-size-medium
@@ -641,7 +644,11 @@ input.email
 
   .col
     margin-bottom: 1em
+    
+  #subscribe
+    font-size: $font-size-basic
 
   .footer-social
     font-size: $font-size-medium
+    text-align: left
 
